Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-131870

qtwayland client apps do not work on Jetson AGX Orin

XMLWordPrintable

    • 9fb7f723c (dev)

      Steps to reproduce:
      1. Flash image to Jetson AGX Orin and power on
      2. Open any app in demolauncher application list

      Observed result:
      Demolauncher goes to different view in which application is expected to be available. Application is not running there.

      Example syslog when startupscreen application is tried to open and then exited to demolauncher main view.

      Dec 04 08:50:23 b2qt-jetson-agx-orin-devkit appcontroller[892]: qt.waylandcompositor.hardwareintegration: EglClientBufferIntegration: creating texture with no current context
      Dec 04 08:50:23 b2qt-jetson-agx-orin-devkit appcontroller[892]: No QSGTexture provided from updateSampledImage(). This is wrong.
      Dec 04 08:50:23 b2qt-jetson-agx-orin-devkit appcontroller[892]: qt.waylandcompositor.hardwareintegration: EglClientBufferIntegration: creating texture with no current context
      Dec 04 08:50:23 b2qt-jetson-agx-orin-devkit appcontroller[892]: No QSGTexture provided from updateSampledImage(). This is wrong.
      Dec 04 08:50:23 b2qt-jetson-agx-orin-devkit appcontroller[892]: qt.waylandcompositor.hardwareintegration: EglClientBufferIntegration: creating texture with no current context
      Dec 04 08:50:33 b2qt-jetson-agx-orin-devkit appcontroller[892]: "warning: queue 0xaaaac90b6e90 destroyed while proxies still attached:\n  wl_registry@3 still attached\nqt.qpa.wayland: \"wl-shell\" is a deprecated shell extension, prefer using \"xdg-shell\" if supported by the compositor by setting the environment variable QT_WAYLAND_SHELL_INTEGRATION\nqt.qpa.wayland: qtvirtualkeyboard currently is not supported at client-side, use QT_IM_MODULES=qtvirtualkeyboard at compositor-side.\nTried to scan while not powered\nTried to scan while not powered\nqt.qpa.wayland: Could not create EGL surface (EGL error 0x321c)\n\nqt.qpa.wayland: eglSwapBuffers failed with 0x300d, surface: 0x0\nqt.qpa.wayland: Could not create EGL surface (EGL error 0x321c)\n\nqt.qpa.wayland: eglSwapBuffers failed with 0x300d, surface: 0x0\nqt.qpa.wayland: Could not create EGL surface (EGL error 0x321c)\n\nqt.qpa.wayland: eglSwapBuffers failed with 0x300d, surface: 0x0\n"
      Dec 04 08:51:49 b2qt-jetson-agx-orin-devkit systemd-journald[317]: Forwarding to syslog missed 6 messages.
       

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            sapiippo Samuli Piippo
            julaakko Juho Lääkkö
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes