Support threaded rendering for Nvidia EGLStreams

Compositor needs use Qt::AA_ShareOpenGLContexts application attribute
on NVidia boards.

Fixes: QTBUG-131870
Change-Id: Ic658da5b8ab1ac097a66085f5f53446a7039f7bd
Reviewed-by: Pasi Petäjäjärvi <pasi.petajajarvi@qt.io>