main.cpp
@@ -29,6 +29,9 @@ void displayHelp(const char *appName)
 
 int main(int argc, char **argv)
 {
+    // ShareOpenGLContexts is needed for using the threaded renderer
+    // on Nvidia EGLStreams
+    QCoreApplication::setAttribute(Qt::AA_ShareOpenGLContexts, true);
     QGuiApplication app(argc, argv);
 
     QString appsRoot;
